testdata/baselines/reference/submodule/conformance/jsdocImportType.errors.txt
use.js(3,11): error TS2304: Cannot find name 'C'.
use.js(8,12): error TS2749: 'D' refers to a value, but is being used as a type here. Did you mean 'typeof D'?


==== use.js (2 errors) ====
    /// <reference path='./types.d.ts'/>
    /** @typedef {import("./mod1")} C
     * @type {C} */
              ~
!!! error TS2304: Cannot find name 'C'.
    var c;
    c.chunk;
    
    const D = require("./mod1");
    /** @type {D} */
               ~
!!! error TS2749: 'D' refers to a value, but is being used as a type here. Did you mean 'typeof D'?
    var d;
    d.chunk;
    
==== types.d.ts (0 errors) ====
    declare function require(name: string): any;
    declare var exports: any;
    declare var module: { exports: any };
==== mod1.js (0 errors) ====
    /// <reference path='./types.d.ts'/>
    class Chunk {
        constructor() {
            this.chunk = 1;
        }
    }
    module.exports = Chunk;
    